# thermal

./: .gitignore
thermal_parser/: Cargo.toml
thermal_parser/src/: context.rs
thermal_parser/src/command_sets/: esc_pos.rs
thermal_parser/src/commands/: cancel_cjk_mode.rs  enter_cjk_mode.rs  mod.rs  set_font.rs  text.rs
thermal_renderer/: Cargo.toml
thermal_renderer/resources/test/: test.esc
thermal_renderer/src/: lib.rs
thermal_renderer/src/image_renderer/: mod.rs  thermal_image.rs
thermal_renderer/src/svg_renderer/: mod.rs  svg_image.rs
thermal_renderer/tests/: integration_test.rs
