[package]
name = "thermal_renderer"
version = "0.0.1"
authors = ["Zach Zurn <zachzurn@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
thermal_parser = { path = "../thermal_parser" }
fontdue = "0.8.0"
textwrap = "0.16.0"
unicode-display-width = "0.3.0"
png = "0.17.5"
base64 = "0.22.0"
once_cell = "1.19.0"
